Revert "Models Initialized"

--- a/templates/basic/index.html
+++ b/templates/basic/index.html
@@ -1,9 +1,10 @@
-{% extends 'basic\base.html' %}
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <title>E-Learning</title>
+    </head>
 
-{% block body %}
-    {% if not user.first_name  %}
-        <h1>Welcome Admin</h1>
-    {% else %}
-        <h1>Welcome {{ user.first_name }}</h1>
-    {% endif %}
-{% endblock %}
+    <body>
+        <h1>Connected</h1>
+    </body>
+</html>
